<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ic_drama"
        android:icon="@drawable/ic_drama"
        android:title="@string/drama"/>

    <item
        android:id="@+id/ic_film"
        android:icon="@drawable/ic_film"
        android:title="@string/film"/>

    <item
        android:id="@+id/ic_news"
        android:icon="@drawable/ic_baseline_news"
        android:title="@string/news"/>

    <item
        android:id="@+id/ic_my_list"
        android:icon="@drawable/ic_my_list"
        android:title="@string/my_list"/>

    <item
        android:id="@+id/ic_my_account"
        android:icon="@drawable/ic_my_account"
        android:title="@string/my_account"/>

</menu>