<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="#FFFFFF"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/image"
            android:layout_width="252dp"
            android:layout_height="195dp"
            android:layout_centerInParent="true"
            android:background="@drawable/logo"></ImageView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:padding="50dp"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/username"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border"
            android:hint="username"
            android:inputType="text"
            android:paddingLeft="10dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="password"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="150dp"
                android:layout_height="47dp"
                android:background="@drawable/button"
                android:padding="8dp"
                android:text="@string/sign_in"
                android:textColor="#FFF"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_signup_insignin"
                android:layout_width="150dp"
                android:layout_height="47dp"
                android:background="@drawable/button"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="#FFF"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:padding="6dp"
            android:text="@string/exit"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>