<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#fff"
            android:textSize="15dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border"
            android:hint="Name"
            android:inputType="text"
            android:paddingLeft="10dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/username"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border"
            android:hint="username"
            android:inputType="text"
            android:paddingLeft="10dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/password"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border"
            android:hint="password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/confirm_password"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="185dp"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:padding="8dp"
                android:text="@string/sign_up"
                android:textColor="#FFF"
                android:textStyle="bold" />
            <RelativeLayout
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_close"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:padding="6dp"
                android:text="@string/close"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>